# Convolution-Animation-OpenGL

./: CMakeLists.txt  README.md
include/: EBO.h  VAO.h  VBO.h  grid.h  images.h  kernel.h  line.h  rectangle.h  renderer.h  shaderClass.h  shape.h
include/glad/: glad.h
shaders/: default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  grid.cpp  images.cpp  kernel.cpp  line.cpp  main.cpp  rectangle.cpp  renderer.cpp  shaderClass.cpp  shape.cpp
